# node-exporter-operator

./: .gitignore  .jujuignore  README.md  charmcraft.yaml  justfile  pyproject.toml
.github/workflows/: ci.yaml
cover/: coverage.xml
src/: charm.py  constants.py  node_exporter_ops.py
src/templates/: node_exporter.service  node_exporter.tmpl
tests/unit/: test_charm.py
