[project]
name = "node-exporter"
version = "0.0"
requires-python = ">=3.12"
dependencies = [
    "ops ~= 2.22",
    "cosl",
]

[project.optional-dependencies]
dev = [
    # Testing
    "coverage[toml] ~= 7.8",
    "ops[testing] ~= 2.22",
    "pytest ~= 8.3",
    "pytest-mock ~= 3.14",
    "pytest-order ~= 1.3",
    "jubilant ~= 1.0",
    "python-dotenv ~= 1.0",
    "pyfakefs==5.7.1",


    # Linting
    "ruff",
    "codespell",
    "pyright",
]


# Testing tools configuration
[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting tools configuration
[tool.ruff]
line-length = 99
lint.select = ["E", "W", "F", "C", "N", "D", "I001"]
lint.extend-ignore = [
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
]
extend-exclude = ["__pycache__", "*.egg_info"]
lint.per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.codespell]
skip = "build,lib,venv,icon.svg,.tox,.git,.mypy_cache,.ruff_cache,.coverage"

[tool.pyright]
include = ["src/**.py"]
